--- a/git_turnpage_demo/bin/AndroidManifest.xml
+++ b/git_turnpage_demo/bin/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.open.trunpage.TuruPageActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
