更改文件夹名称！

--- a/git_turnpage/.project
+++ b/git_turnpage/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>git_turnpage_lib</name>
+	<name>git_turnpage</name>
 	<comment></comment>
 	<projects>
 	</projects>
