--- a/git_turnpage/AndroidManifest.xml
+++ b/git_turnpage/AndroidManifest.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.open.turnpage"
+    package="com.open.trunpage"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -12,6 +13,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity
+            android:name="com.open.trunpage.MainActivity"
+            android:label="@string/app_name"
+			android:theme="@android:style/Theme.NoTitleBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.open.trunpage.TuruPageActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
